--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -3,14 +3,12 @@ html, body {
     font-family: "Lato", sans-serif;
     height: 100%;
     margin: 0 auto;
+    padding: 0;
 }
 
 .imageParent {
     width: 100%;
     background-image: url("https://images.pexels.com/photos/345415/pexels-photo-345415.jpeg?cs=srgb&dl=action-air-balance-345415.jpg&fm=jpg");
-    /* background-image:
-  linear-gradient(to bottom, rgba(255,255,0,0.5), rgba(0,0,255,0.5)),
-  url('https://mdn.mozillademos.org/files/7693/catfront.png'); */
     min-height: 100vh;
     height: 100vh;
     background-position: center;
@@ -31,8 +29,7 @@ html, body {
 
 #title {
     color: black;
-    font-size: 37px;
-    
+    font-size: 37px;    
     position: absolute;
     top: 50%;
     left: 41%;
