--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,5 +1,5 @@
 html, body {
-    background-color: pink;
+    /* background-color: pink; */
     font-family: "Lato", sans-serif;
     height: 100%;
     margin: 0 auto;
@@ -8,7 +8,7 @@ html, body {
 
 .imageParent {
     width: 100%;
-    background-image: url("https://images.pexels.com/photos/345415/pexels-photo-345415.jpeg?cs=srgb&dl=action-air-balance-345415.jpg&fm=jpg");
+    background-image: url("https://images.pexels.com/photos/1558732/pexels-photo-1558732.jpeg?cs=srgb&dl=agriculture-clouds-colors-1558732.jpg&fm=jpg");
     min-height: 100vh;
     height: 100vh;
     background-position: center;
