--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,3 +1,9 @@
+@font-face {
+    src: url(../fonts/Raleway-Thin.ttf);
+    font-family: Raleway-Thin;
+}
+
+
 html, body {
     /* background-color: pink; */
     font-family: "Lato", sans-serif;
@@ -6,11 +12,15 @@ html, body {
     padding: 0;
 }
 
+.navbar-custom {
+    background-color: black;
+}
+
 .imageParent {
     width: 100%;
-    background-image: url("https://images.pexels.com/photos/1558732/pexels-photo-1558732.jpeg?cs=srgb&dl=agriculture-clouds-colors-1558732.jpg&fm=jpg");
-    min-height: 100vh;
-    height: 100vh;
+    background-image: url("https://images.unsplash.com/photo-1419242902214-272b3f66ee7a?ixlib=rb-1.2.1&auto=format&fit=crop&w=1087&q=80");
+    min-height: 130vh;
+    height: 130vh;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -23,19 +33,83 @@ html, body {
     padding: 30px;
     background-color: black;
     color: white;
-    width: 650px;
+    width: 850px;
     margin: auto;                                                                                               
 }
 
 #title {
-    color: black;
-    font-size: 37px;    
-    position: absolute;
-    top: 50%;
-    left: 41%;
+    color: white;
+    font-size: 112px;    
+    /* position: absolute; */
+    padding-top: 21%;
+    /* left: 41%; */
     text-align: center;
-    font-family: "Lato", sans-serif;
-    border: 2px solid black;
-    padding: 20px 40px 20px 40px;
-    background-color: rgba(255,255,255,0.8)
+    margin: auto;
+    font-family: Raleway-Thin , sans-serif;
+    /* border: 2px solid black; */
+    /* padding: 20px 40px 20px 40px; */
+    /* background-color: rgba(255,255,255,0.8) */
+}
+
+#loading-text {
+    padding-top: 100px;
+    text-align: center;
+    font-size: 40px;
+    font-family: Raleway-Thin;    
+}
+
+#loading-gif {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    /* width: 50%; */
+    margin-bottom: 1000px;
+}
+
+#form-smalltext {
+    /* padding-top: 3px; */
+    font-size: 14px;
+    color:#ccc;
+}
+
+#form-div {
+    background-color: black;
+    width: 100%;
+    padding-top: 120px;
+    
+}
+
+#form-title {
+    color: #28a745;
+}
+
+#submitButton {
+    margin-bottom: 250px;
+}
+
+#about {
+    width: 100%;
+    height: 140vh;
+    background-color: black;
+    padding: 120px 40px 150px 200px;
+}
+
+#about-text {
+    margin: auto;
+    padding-top: 50px;
+    color: white;
+    text-align: center;
+    width: 80%;
+}
+
+#about-title {
+    font-size: 70px;
+    font-weight: 900;
+    font-family: Raleway-Thin;
+
+}
+
+#about-para{
+    font-size: 40px;
+    font-family: Raleway-Thin;
 }
